program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -1637,20 +1637,20 @@ msgid "%1 since starting the program"
 msgstr "%1 depuis le lancement"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 erreur"
-msgstr[1] "%1 erreurs"
-msgstr[2] "%1 erreurs"
+msgstr[0] "%1+%2 erreur"
+msgstr[1] "%1+%2 d'erreurs"
+msgstr[2] "%1+%2 erreurs"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 avertissement"
-msgstr[1] "%1 avertissements"
-msgstr[2] "%1 avertissements"
+msgstr[0] "%1+%2 avertissement"
+msgstr[1] "%1+%2 d'avertissements"
+msgstr[2] "%1+%2 avertissements"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:351
 #, no-c-format
@@ -3056,7 +3056,7 @@ msgstr "<ChapterTrack> n'a pas l'enfant <ChapterTrackNumber>."
 #: src/mkvtoolnix-gui/merge/input.cpp:1822
 #, no-c-format
 msgid "<Do not change>"
-msgstr "<Ne pas modifier>"
+msgstr "<Do not change>"
 
 #: src/common/xml/ebml_chapters_converter.cpp:192
 #, no-c-format
@@ -3750,7 +3750,7 @@ msgstr "Le nom de toutes les propriétés connues et leur signification\n"
 #: src/mkvtoolnix-gui/merge/input.cpp:655
 #, no-c-format
 msgid "All occurrences of the string \"<TID>\" will be replaced by the track's track ID."
-msgstr "Toutes les occurrences de la chaîne « <TID> » seront remplacées par l'ID de la piste."
+msgstr "Toutes les occurrences de la chaîne « <TID> » seront remplacées par l'ID de la piste."
 
 #: src/extract/extract_cli_parser.cpp:67
 #, no-c-format
@@ -3895,7 +3895,7 @@ msgstr "Une pièce jointe avec l'identifiant {0} est introuvable.\n"
 #: src/mkvtoolnix-gui/merge/attachments.cpp:258
 #, no-c-format
 msgid "An attachment with the name '%1' is already present."
-msgstr "Une pièce jointe avec le nom « %1 » existe déjà."
+msgstr "Une pièce jointe avec le nom « %1 » existe déjà."
 
 #: src/merge/mkvmerge.cpp:1987
 #, no-c-format
@@ -6058,7 +6058,7 @@ msgstr "Faut-il vraiment abandonner cette tâche active ?"
 #: src/mkvtoolnix-gui/merge/attachments.cpp:259
 #, no-c-format
 msgid "Do you really want to add '%1' as another attachment?"
-msgstr "Faut-il vraiment ajouter « %1 » comme une autre pièce jointe ?"
+msgstr "Faut-il vraiment ajouter « %1 » en tant qu'autre pièce jointe ?"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:589
 #, no-c-format
@@ -7689,7 +7689,7 @@ msgstr "Si plus d'UID de segment sont spécifiés que de segments créés, l'exc
 #: src/mkvtoolnix-gui/merge/input.cpp:594
 #, no-c-format
 msgid "If no unit is given, 'fps' will be used."
-msgstr "Si aucune unité n'est fournie, « fps » sera utilisée."
+msgstr "Si aucune unité n'est fournie, « fps » sera utilisée."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:313
 #: src/mkvtoolnix-gui/merge/output.cpp:329
@@ -7720,12 +7720,12 @@ msgstr "Si un est trouvé, le programme demandera pour ignorer le fichier ou l'a
 #: src/mkvtoolnix-gui/merge/input.cpp:575
 #, no-c-format
 msgid "If set to 'determine automatically' then mkvmerge will decide whether or not to compress and which algorithm to use based on the track type."
-msgstr "Si défini sur « Déterminer automatiquement », mkvmerge décidera s'il faut ou non compresser et l'algorithme à utiliser selon le type de la piste."
+msgstr "Si défini sur « Déterminer automatiquement », mkvmerge décidera s'il faut ou non compresser et l'algorithme à utiliser selon le type de piste."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:552
 #, no-c-format
 msgid "If set to 'no' then the selected tracks will not be copied to the destination file."
-msgstr "Si défini à « Non », les pistes sélectionnées ne seront pas copiées vers le fichier destination."
+msgstr "Si défini à « Non », les pistes sélectionnées ne seront pas copiées vers le fichier destination."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:431
 #, no-c-format
@@ -7750,7 +7750,7 @@ msgstr "Si la valeur magique -1 est utilisée, mkvmerge utilisera la précision 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:37
 #, no-c-format
 msgid "If the number is postfixed with 'ms' then put at most 'n' milliseconds of data into each cluster."
-msgstr "Si le nombre est suivi de « ms », mettre au plus « n » millisecondes de données dans chaque grappe."
+msgstr "Si le nombre est suivi de « ms », alors mettre au plus « n » millisecondes de données dans chaque grappe."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:497
 #, no-c-format
@@ -9540,7 +9540,7 @@ msgstr "mkvmerge appliquera normalement une compression sans perte additionnelle
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:67
 #, no-c-format
 msgid "Normally mkvmerge will use a value of 1000000 which means that timestamps and durations will have a precision of 1ms."
-msgstr "mkvmerge utilise normalement la valeur 1000000, qui signifie que les horodatages et les durées ont une précision de 1 ms."
+msgstr "mkvmerge utilise normalement la valeur 1 000 000, qui signifie que les horodatages et les durées ont une précision de 1 ms."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:322
 #, no-c-format
@@ -9597,7 +9597,7 @@ msgstr "Pas encore terminée"
 #: src/mkvtoolnix-gui/merge/input.cpp:632
 #, no-c-format
 msgid "Not needed for AAC tracks read from other container formats like MP4 or Matroska files."
-msgstr "Pas nécessaire pour les pistes AAC lues dans les autres formats conteneurs comme MP4 ou Matroska."
+msgstr "Pas nécessaire pour les pistes AAC lues dans les autres formats de conteneurs comme MP4 ou Matroska."
 
 #: src/mkvtoolnix-gui/forms/watch_jobs/tab.h:292
 #: src/mkvtoolnix-gui/watch_jobs/tab.cpp:370
@@ -9777,7 +9777,7 @@ msgstr "Seulement requis pour les fichiers source AAC car SBR AAC ne peut pas ê
 #: src/mkvtoolnix-gui/merge/input.cpp:644
 #, no-c-format
 msgid "Only needed in certain situations:"
-msgstr "Nécessaire seulement dans certaines situations :"
+msgstr "Nécessaire seulement dans certaines situations :"
 
 #: src/merge/mkvmerge.cpp:1814
 #, no-c-format, c++-format
@@ -10385,7 +10385,7 @@ msgstr "Échec de l'exécution du programme"
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:39
 #, no-c-format
 msgid "Programs will only be able to seek to clusters, so creating larger clusters may lead to imprecise or slow seeking."
-msgstr "Les programmes ne pourront qu'effectuer un positionnement de grappes (clusters), donc la création de grappes plus grandes pourrait conduire à un positionnement lent ou imprécis."
+msgstr "Les programmes ne pourront effectuer qu'un positionnement vers les grappes (clusters), donc la création de grappes plus grandes pourrait conduire à un positionnement lent ou imprécis."
 
 #: src/mkvtoolnix-gui/jobs/model.cpp:112
 #, no-c-format
@@ -12190,7 +12190,7 @@ msgstr "Demande à mkvmerge d'abandonner après le premier avertissement."
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:41
 #, no-c-format
 msgid "Tells mkvmerge to create a meta seek element at the end of the file containing all clusters."
-msgstr "Demande à mkvmerge de créer un méta-index de positionnement à la fin du fichier contenant toutes les grappes."
+msgstr "Demande à mkvmerge de créer un élément de méta-index de positionnement à la fin du fichier contenant toutes les grappes."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:49
 #, no-c-format
@@ -12200,7 +12200,7 @@ msgstr "Demande à mkvmerge de transférer toutes les données cachées en mémo
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:36
 #, no-c-format
 msgid "Tells mkvmerge to put at most 'n' data blocks into each cluster."
-msgstr "Demande à mkvmerge de mettre au plus « n » blocs de données dans chaque grappe."
+msgstr "Demande à mkvmerge de mettre au plus « n » blocs de données dans chaque grappe."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:786
 #, no-c-format
@@ -12650,7 +12650,7 @@ msgstr "La date à laquelle le fichier a été créé."
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:33
 #, no-c-format
 msgid "The default is 'file' with 'track' being an alternative mode."
-msgstr "Par défaut c'est « fichier », avec « piste » comme mode alternatif."
+msgstr "Par défaut c'est « fichier », avec « piste » comme mode alternatif."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:466
 #, no-c-format
@@ -12851,7 +12851,7 @@ msgstr "Le fichier « %1 » n'a pas été reconnu comme format de conteneur pris
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:49
 #, no-c-format
 msgid "The file '%1' you've added is a playlist."
-msgstr "Le fichier « %1 » ajouté est une liste de lecture."
+msgstr "Le fichier « %1 » ajouté est une liste de lecture."
 
 #: src/merge/mkvmerge.cpp:1756
 #, no-c-format, c++-format
@@ -13146,7 +13146,7 @@ msgstr "Les modes suivants sont gérés :"
 #: src/mkvtoolnix-gui/merge/mux_config.cpp:278
 #, no-c-format
 msgid "The following non-recoverable error was found: %1."
-msgstr "L'erreur non récupérable suivante est survenue : %1."
+msgstr "L'erreur non récupérable suivante est survenue : %1."
 
 #: src/mkvtoolnix-gui/jobs/program_runner.cpp:213
 #, no-c-format
@@ -13316,7 +13316,7 @@ msgstr "La langue locale ne peut pas être déterminée correctement. Vérifier 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:38
 #, no-c-format
 msgid "The maximum length for a cluster that mkvmerge accepts is 60000 blocks and 32000ms; the minimum length is 100ms."
-msgstr "La longueur maximale pour une grappe acceptée par mkvmerge est 60000 blocs et 32000 ms ; la longueur minimale est 100 ms."
+msgstr "La longueur maximale pour une grappe acceptée par mkvmerge est 60 000 blocs et 32 000 ms ; la longueur minimale est 100 ms."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:187
 #, no-c-format
@@ -13902,7 +13902,7 @@ msgstr "La valeur « {} » ne fait pas partie du Registre de Sous-balises de L
 #: src/mkvtoolnix-gui/merge/input.cpp:606
 #, no-c-format
 msgid "The value can be given either as a floating point number (e.g. 12.345) or a fraction of integer values (e.g. 123/456)."
-msgstr "La valeur peut être fournie sous la forme d'un nombre décimal (par exemple 12.345) ou d'une fraction de nombres entiers (par exemple 123/456)."
+msgstr "La valeur peut être fournie sous la forme d'un nombre décimal (par exemple 12,345) ou d'une fraction de nombres entiers (par exemple 123/456)."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:586
 #: src/mkvtoolnix-gui/merge/output.cpp:229
@@ -14152,7 +14152,7 @@ msgstr "Ce n'est probablement pas un fichier Matroska."
 #: src/mkvtoolnix-gui/merge/input.cpp:2249
 #, no-c-format
 msgid "This function requires the application %1."
-msgstr "Cette fonction nécessite l'application « %1 »."
+msgstr "Cette fonction nécessite l'application « %1 »."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:318
 #, no-c-format
@@ -14304,7 +14304,7 @@ msgstr "Cette option force mkvmerge à traiter toutes ces tranches I comme des t
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:35
 #, no-c-format
 msgid "This option needs an additional argument 'n'."
-msgstr "Cette option nécessite un argument « n » supplémentaire."
+msgstr "Cette option nécessite un argument « n » supplémentaire."
 
 #: src/common/hacks.cpp:57
 #, no-c-format
@@ -15802,7 +15802,7 @@ msgstr "Le format utilisé par l'horodatage de début peut être contrôlé avec
 #: src/mkvtoolnix-gui/merge/input.cpp:2252
 #, no-c-format
 msgid "You can download the application from the following URL:"
-msgstr "L'application peut être téléchargée depuis l'URL suivante :"
+msgstr "L'application peut être téléchargée depuis l'URL suivante :"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:595
 #, no-c-format
@@ -15832,7 +15832,7 @@ msgstr "Il est possible de spécifier un nombre minimal de chiffres pour le nomb
 #: src/mkvtoolnix-gui/merge/input.cpp:593
 #, no-c-format
 msgid "You can specify one of the units 's', 'ms', 'us', 'ns', 'fps', 'i' or 'p'."
-msgstr "Une des unités suivantes peut être spécifiée : « s », « ms », « us », « ns », « fps », « i » ou « p »."
+msgstr "Une des unités suivantes peut être spécifiée : « s », « ms », « us », « ns », « fps », « i » ou « p »."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:290
 #, no-c-format
@@ -15863,7 +15863,7 @@ msgstr "Il n'est pas possible d'ajouter des parties supplémentaires à des fich
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:66
 #, no-c-format
 msgid "You have to enter a value between 1000 and 10000000 or the magic value -1."
-msgstr "Il faut entrer une valeur comprise entre 1000 et 10000000 ou la valeur magique -1."
+msgstr "Il faut entrer une valeur comprise entre 1 000 et 10 000 000 ou la valeur magique -1."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:413
 #, no-c-format
