man page translations: update Russian

--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -38,10 +38,8 @@ msgstr "87.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2020-09-06"
 msgid "2024-09-07"
-msgstr "2020-09-06"
+msgstr "2024-09-07"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2623,10 +2621,8 @@ msgstr "<option>--attach-file</option> <parameter>имя-файла</parameter>,
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1164
-#, fuzzy
-#| msgid "Creates a file attachment inside the &matroska; file. The <abbrev>MIME</abbrev> type must have been set before this option can used. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created.  If splitting is not used then both do the same."
 msgid "Creates a file attachment inside the &matroska; file. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created. If splitting is not used then both do the same."
-msgstr "Создаёт вложение внутри файла &matroska;. Перед использованием этого параметра необходимо установить тип <abbrev>MIME</abbrev>. Разница между этими двумя формами заключается в том, что при разделении файлы, вложенные с помощью <option>--attach-file</option>, прикрепляются ко всем исходным файлам, а файлы, прикреплённые с помощью <option>--attach-file-once</option>, прикрепляются только к первому созданному файлу. Если разделение не используется, то оба делают одно и то же."
+msgstr "Создает файл-вложение внутри файла &matroska;. Разница между двумя формами заключается в том, что при разбиении файлы, прикреплённые с помощью <option>--attach-file</option>, прикрепляются ко всем выходным файлам, а файлы, прикреплённые с помощью <option>--attach-file-once</option>, прикрепляются только к первому созданному файлу. Если разделение не используется, то оба варианта работают одинаково."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1170
