--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-10-18 21:41+0200\n"
+"POT-Creation-Date: 2024-10-19 15:11+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Andrei Stepanov, 2018-2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "87.0"
-msgstr "87.0"
+msgid "88.0"
+msgstr "88.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -38,8 +38,10 @@ msgstr "87.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-09-07"
-msgstr "2024-09-07"
+#, fuzzy
+#| msgid "2024-07-13"
+msgid "2024-10-19"
+msgstr "2024-06-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5771,9 +5773,8 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
-#~| msgid "2024-06-02"
-#~ msgid "2024-07-13"
-#~ msgstr "2024-06-02"
+#~ msgid "2024-09-07"
+#~ msgstr "2024-09-07"
 
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
