--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (88.0-0~bunkus01) oracular; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 19 Oct 2024 15:11:50 +0200
+
 mkvtoolnix (87.0-0~bunkus01) noble; urgency=low
 
   * New version.
