program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -10247,7 +10247,7 @@ msgstr "Mulige årsaker er: filen er ikke en Matroska-fil; filen er skrivebeskyt
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:205
 #, no-c-format
 msgid "PotPlayer bookmark files"
-msgstr ""
+msgstr "PotPlayer bokmerkefiler"
 
 #: src/mkvtoolnix-gui/forms/main_window/select_character_set_dialog.h:151
 #, no-c-format
