man page translations: update Norwegian Bokmål

--- a/doc/man/po4a/po/nb.po
+++ b/doc/man/po4a/po/nb.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-10-19 15:11+0200\n"
-"PO-Revision-Date: 2024-06-19 14:32+0200\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Roger Knutsen, 2024\n"
 "Language-Team: Norwegian Bokmål (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/nb/)\n"
 "Language: nb\n"
@@ -2621,10 +2621,8 @@ msgstr "<option>--attach-file</option> <parameter>filnavn</parameter>, <option>-
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1164
-#, fuzzy
-#| msgid "Creates a file attachment inside the &matroska; file. The <abbrev>MIME</abbrev> type must have been set before this option can used. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created.  If splitting is not used then both do the same."
 msgid "Creates a file attachment inside the &matroska; file. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created. If splitting is not used then both do the same."
-msgstr "Oppretter et filvedlegg inne i &matroska;-filen. <abbrev>MIME</abbrev>-typen må ha blitt angitt før dette alternativet kan brukes. Forskjellen mellom de to formene er at under splitting blir filene vedlagt med <option>--attach-file</option> vedlagt alle utdatafiler, mens de vedlagt med <option>--attach-file-once</option> bare legges til den første filen som opprettes. Hvis splitting ikke brukes, gjør begge det samme."
+msgstr "Oppretter et filvedlegg i &matroska;-filen. Forskjellen mellom de to skjemaene er at under splitting av filene som er vedlagt med <option>--attach-file</option> er knyttet til alle utdatafiler mens de som er vedlagt med <option>--attach-file-once</option> bare er knyttet til den første filen som opprettes. Hvis splitting ikke brukes, gjør begge det samme."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1170
