program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1647,7 +1647,7 @@ msgstr[2] "%1 entradas"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:133
 #, no-c-format
 msgid "%1 from earlier runs"
-msgstr ""
+msgstr "%1 de execuções anteriores"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -1660,23 +1660,23 @@ msgstr "%1 pixels"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:132
 #, no-c-format
 msgid "%1 since starting the program"
-msgstr ""
+msgstr "%1 desde a inicialização do programa"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 erro"
-msgstr[1] "%1 erros"
-msgstr[2] "%1 erros"
+msgstr[0] "%1+%2 erro"
+msgstr[1] "%1+%2 erros"
+msgstr[2] "%1+%2 erros"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 aviso"
-msgstr[1] "%1 avisos"
-msgstr[2] "%1 avisos"
+msgstr[0] "%1+%2 aviso"
+msgstr[1] "%1+%2 avisos"
+msgstr[2] "%1+%2 avisos"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:351
 #, no-c-format
@@ -7240,11 +7240,9 @@ msgid "General variables"
 msgstr "Variáveis gerais"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
-"  --regenerate-track-uids  Gera novos UIDs de faixa aleatória em vez de manter\n"
-"                           os existentes.\n"
+msgstr "Gere novos UIDs de faixas aleatórias em vez de manter os existentes."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7474,9 +7472,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:965
 #: src/mkvtoolnix-gui/merge/tool.cpp:966
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Adicionando arquivos"
+msgstr "Identificando arquivos"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -9709,9 +9707,9 @@ msgid "Number of chapters:"
 msgstr "Número de capítulos:"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:131
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of errors:"
-msgstr "Número de capítulos:"
+msgstr "Número de erros:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:197
 #, no-c-format
@@ -9724,9 +9722,9 @@ msgid "Number of nanoseconds (not scaled) per frame."
 msgstr "Número de nanossegundos (não dimensionados) por quadro."
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of warnings:"
-msgstr "Número de capítulos:"
+msgstr "Número de avisos:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -10300,7 +10298,7 @@ msgstr "Os possíveis motivos são: o arquivo não é um arquivo Matroska; o arq
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:205
 #, no-c-format
 msgid "PotPlayer bookmark files"
-msgstr ""
+msgstr "Arquivos de marcadores do PotPlayer"
 
 #: src/mkvtoolnix-gui/forms/main_window/select_character_set_dialog.h:151
 #, no-c-format
@@ -10345,7 +10343,7 @@ msgstr "Nomes de faixa de vídeo predefinidos"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Evita que o mkvmerge procure camadas de aprimoramento Dolby Vision armazenadas em uma faixa separada e as combine com a faixa que contém a camada base Dolby Vision."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
@@ -15577,9 +15575,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "Ao derivar o idioma da faixa do nome do arquivo, este nome é dividido em partes nos caracteres desta lista."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "Ao adicionar vários arquivos através de \"adicionar arquivos de origem\":"
+msgstr "Quando fornecida, esta opção se aplica a todos os arquivos de origem."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
