man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -2626,10 +2626,8 @@ msgstr "<option>--attach-file</option> <parameter>file-name</parameter>, <option
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1164
-#, fuzzy
-#| msgid "Creates a file attachment inside the &matroska; file. The <abbrev>MIME</abbrev> type must have been set before this option can used. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created.  If splitting is not used then both do the same."
 msgid "Creates a file attachment inside the &matroska; file. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created. If splitting is not used then both do the same."
-msgstr "Crée un fichier joint dans le fichier &matroska;. Le type <abbrev>MIME</abbrev> doit avoir été défini avant que cette option puisse être utilisée. La différence entre les deux formes est que pendant la scission les fichiers joints avec <option>--attach-file</option> le sont à tous les fichiers cibles alors que ceux joints avec <option>--attach-file-once</option> le sont seulement au premier fichier créé. Si la scission n'est pas utilisée, alors les deux font la même chose."
+msgstr "Crée un fichier de pièce jointe dans un fichier &matroska;. La différence entre les deux formes est que, pendant la scission, les fichiers attachés avec <option>--attach-file</option> le sont à tous les fichiers en sortie, tandis que ceux attachés avec <option>--attach-file-once</option> ne le sont qu'au premier fichier créé. En l'absence de scission, alors les deux formes font la même chose.."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1170
