--- a/po/nl.po
+++ b/po/nl.po
@@ -12567,7 +12567,7 @@ msgstr "De overeenkomstige canonieke vorm is: %1."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:511
 #, fuzzy, no-c-format
 msgid "The corresponding extended language subtags form is: %1."
-msgstr "Het bereikpercentage van sonde '{0}' is ongeldig.\n"
+msgstr "De overeenkomstige uitgebreide taal-subtagsvorm is: %1."
 
 #: src/merge/output_control.cpp:1678
 #, no-c-format
@@ -12587,7 +12587,7 @@ msgstr "De volg document(en) (cue) voor spoor {0} worden geschreven naar '{1}'.\
 #: src/mkvtoolnix-gui/gui_cli_parser.cpp:53
 #, no-c-format
 msgid "The current mode can be changed with --multiplex, --edit-chapters or --edit-headers."
-msgstr "De huidige mode kan worden veranderd met --multiplex, --edit-chapters or --edit-headers."
+msgstr "De huidige modus kan worden veranderd met --multiplex, --edit-chapters of --edit-headers."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:458
 #, no-c-format
@@ -12597,7 +12597,7 @@ msgstr "De huidige samenvoeg instellingen worden gesloten."
 #: src/merge/generic_packetizer.cpp:1509
 #, no-c-format, c++-format
 msgid "The current packet's timestamp is smaller than that of the previous packet. This usually means that the source file is a Matroska file that has not been created 100% correctly. The timestamps of all packets will be adjusted by {0}ms in order not to lose any data. This may throw audio/video synchronization off, but that can be corrected with mkvmerge's \"--sync\" option. If you already use \"--sync\" and you still get this warning then do NOT worry -- this is normal. If this error happens more than once and you get this message more than once for a particular track then either is the source file badly mastered, or mkvmerge contains a bug. In this case you should contact the author Moritz Bunkus <moritz@bunkus.org>.\n"
-msgstr "Het huidige pakket tijd code is kleiner dan het voorafgaande pakket. Normaal gesproken betekent dit, dat het een Matroska bestand is welke niet 100% juist is aangemaakt. De tijd codes worden bijgesteld met {0}ms om niets (wat dat dan ook) te verliezen. Dat kan de audio/video synchronisatie uitzetten, maar kunnen gecorrigeerd worden met mkvmerge's \"--sync\" optie. Gebruik je dit \"--sync\" reeds en je blijft deze melding houden geen probleem -- dit is normaal. Komt deze fout vaker voor en je krijgt dit bericht meer dan eens voor een specifiek spoor, dan is of de bron slecht beheerd of mkvmerge bevat een fout (bug). In dat geval dien je contact op te nemen met de auteur Moritz Bunkus <moritz@bunkus.org>.\n"
+msgstr "Het huidige pakket tijd code is kleiner dan het voorafgaande pakket. Normaal gesproken betekent dit, dat het een Matroska bestand is welke niet 100% juist is aangemaakt. De tijd codes worden bijgesteld met {0}ms om geen data te verliezen. Dat kan de audio/video synchronisatie uitzetten, maar kan gecorrigeerd worden met mkvmerge's \"--sync\" optie. Gebruik je deze \"--sync\" optie reeds en je blijft deze melding houden geen probleem -- dit is normaal. Komt deze fout vaker voor en je krijgt dit bericht meer dan eens voor een specifiek spoor, dan is of de bron slecht gemasterd of mkvmerge bevat een fout (bug). In dat geval dien je contact op te nemen met de auteur Moritz Bunkus <moritz@bunkus.org>.\n"
 
 #: src/common/kax_analyzer.cpp:195
 #, no-c-format
@@ -12622,12 +12622,12 @@ msgstr "De datum dat het bestand was aangemaakt."
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:33
 #, no-c-format
 msgid "The default is 'file' with 'track' being an alternative mode."
-msgstr ""
+msgstr "De standaardmodus is 'bestand', terwijl 'track' een alternatieve modus is."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:466
 #, no-c-format
 msgid "The default is to always add all the files to the current multiplex settings."
-msgstr "Standaard is, dat altijd alle bestanden toe te voegen volgens huidige samenvoeg instellingen."
+msgstr "Standaard worden altijd alle bestanden toegevoegd aan de huidige multiplexinstellingen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:634
 #, no-c-format
@@ -12671,7 +12671,7 @@ msgstr "De naam van het bestemmingsbestand is ongeldig en moet worden hersteld v
 #, no-c-format
 msgid "The directory it is located in contains %1 other file with the same extension."
 msgid_plural "The directory it is located in contains %1 other files with the same extension."
-msgstr[0] "De map waarin het zich bevind, bevat %1 andere bestand met dezelfde extensie."
+msgstr[0] "De map waarin het zich bevind, bevat %1 ander bestand met dezelfde extensie."
 msgstr[1] "De map waarin het zich bevind, bevat %1 andere bestanden met dezelfde extensie."
 
 #: src/merge/connection_checks.h:48
@@ -12687,7 +12687,7 @@ msgstr "De scherm breedte van de twee sporen zijn verschillend: {0} en {1}"
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:51
 #, no-c-format
 msgid "The downside is that multiplexing will take longer as mkvmerge will wait until all data has been written to the storage before exiting."
-msgstr "Het nadeel is dat samewnvoegen langer zal duren, omdat mkvmerge zal wachten totdat alle gegevens naar de opslag zijn geschreven voordat ze worden afgesloten."
+msgstr "Het nadeel is dat samenvoegen langer zal duren, omdat mkvmerge zal wachten totdat alle gegevens naar de opslag zijn geschreven voordat ze worden afgesloten."
 
 #: src/merge/mkvmerge.cpp:3216
 #, no-c-format
@@ -12744,7 +12744,7 @@ msgstr "Het bereikpercentage van sonde '{0}' is ongeldig.\n"
 #: src/common/bcp47.cpp:448
 #, no-c-format, c++-format
 msgid "The extended language subtag '{}' must only be used with one of the following prefixes: {}."
-msgstr ""
+msgstr "De uitgebreide taalsubtag '{}' mag alleen worden gebruikt met een van de volgende voorvoegsels: {}."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:490
 #, fuzzy, no-c-format
@@ -12759,7 +12759,7 @@ msgstr "De verkregen waarde voor de video breedte en hoogte van de MPEG4 laag 2 
 #: src/extract/extract_cli_parser.cpp:117
 #, no-c-format
 msgid "The fifth mode tries to extract chapter information and tags and outputs them as a cue sheet. This is the reverse of using a cue sheet with mkvmerge's '--chapters' option."
-msgstr "De vijfde mode probeert het hoofdstuk informatie te achterhalen, markeert en voert ze uit als in een volg document(en) (cue). Dit is het omgekeerde dan het gebruik maken van een volg document(en) (cue) via mkvmerge's '--chapters' optie."
+msgstr "De vijfde mode probeert het hoofdstuk informatie te achterhalen, markeert en voert ze uit als een volg document(en) (cue). Dit is het omgekeerde van het gebruik maken van een volg document(en) (cue) via mkvmerge's '--chapters' optie."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:278
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:954
@@ -12796,12 +12796,12 @@ msgstr "Het bestand '%1' kon niet worden gevonden in de installatiemap."
 #: src/mkvtoolnix-gui/jobs/tool.cpp:588
 #, no-c-format
 msgid "The file '%1' exists already and might be overwritten depending on the configuration & the content of the source files."
-msgstr ""
+msgstr "Het bestand '%1' bestaat al en kan worden overschreven, afhankelijk van de configuratie en de inhoud van de bronbestanden."
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:177
 #, fuzzy, no-c-format
 msgid "The file '%1' is an unsupported container format (%2)."
-msgstr "Het bestand is een niet ondersteund inhoud formaat (%1)."
+msgstr "Het bestand '%1' is een niet-ondersteund containerformaat (%2)."
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:555
 #, no-c-format
@@ -12811,7 +12811,7 @@ msgstr "Het bestand '%1' is geen opdrachtwachtrijbestand noch een instellingenbe
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:172
 #, fuzzy, no-c-format
 msgid "The file '%1' was not recognized as a supported format (exit code: %2)."
-msgstr "Het bestand is niet herkend als een ondersteund format (verlaat code: %1)."
+msgstr "Het bestand '%1' werd niet herkend als ondersteund formaat (exitcode: %2)."
 
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:49
 #, no-c-format
@@ -12821,7 +12821,7 @@ msgstr "Het bestand '%1' dat je hebt toegevoegd is een afspeellijst."
 #: src/merge/mkvmerge.cpp:1756
 #, no-c-format, c++-format
 msgid "The file '{0}' cannot be attached because it does not exist or cannot be read.\n"
-msgstr "Het bestand '{0}' kan niet vastgemaakt worden het bestaat niet of kan niet gelezen worden.\n"
+msgstr "Het bestand '{0}' kan niet vastgemaakt worden omdat het niet bestaat, of niet gelezen kan worden.\n"
 
 #: src/propedit/propedit.cpp:146
 #: src/propedit/propedit.cpp:175
@@ -12832,7 +12832,7 @@ msgstr "Het bestand '{0}' kon niet geopend worden voor het lezen en schrijven, o
 #: src/propedit/propedit.cpp:130
 #, no-c-format, c++-format
 msgid "The file '{0}' could not be opened for reading and writing: {1}.\n"
-msgstr "Het bestand '{0}' kon voor lezen niet geopend worden: {1}.\n"
+msgstr "Het bestand '{0}' kon voor lezen en schrijven niet geopend worden: {1}.\n"
 
 #: src/common/kax_analyzer.cpp:1735
 #: src/common/kax_analyzer.cpp:1738
